TenLang/grammar
Text : 
	ExecCode |
	Comments;
ExecCode : 
	ComplexBody |
	Declaration;
ComplexBody : 
	ComplexBody ; ComplexBody |
	ComplexBody U ComplexBody |
	ComplexBody* |
	Body;
Body : 
	Assigment |
	Test |
	Operator;
Assigment : 
	VarName := Expression;
Test : 
	Expression > Expression |
	Expression < Expression |
	Expression = Expression |
	Expression >= Expression |
	Expression <= Expression;
Operator : 
	PRINT VarName |
	INPUT VarName |
	UPD VarName[Index] |
	APP VarName[Index];
Declaration : 
	VAR VarName : Type;
Expression : 
	Term + Term |
	Term - Term |
	Term;
Term : 
	Factor * Factor |
	Factor / Factor |
	Factor;
Factor :
	Power ^ Factor |
	Power;
Power :
	Atom |
	-Atom;
Atom :
	Constant |
	VarName |
	Expression;
